# multi-touch-attribution

./: .gitignore  INSTALLATION_AND_DEMO_GUIDE.md  MCA_Erie_Implementation_Guide_v2.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.sh
app/: app.py  data_store.py  theme.py
app/assets/: custom.css
app/components/: __init__.py  animated_transition.py  attribution_bars.py  budget_sliders.py  components.py  identity_graph_viz.py  insight_callout.py  journey_explorer.py  metric_card.py  model_selector.py  navbar.py  parameter_panel.py  sankey_chart.py
app/pages/: attribution_comparison.py  budget_optimizer.py  channel_deepdive.py  executive_summary.py  identity_resolution.py  journey_paths.py  technical_appendix.py  validation.py
config/: channels.yaml  config.yaml  demo_narrative.yaml  funnel.yaml  model_params.yaml  synthetic_data.yaml  ui_theme.yaml
data/raw/: channel_spend.parquet  conversions.parquet  (+1 more)
docs/: Business_User_Manual.md  MCA_Demo_Complete_Alignment_Steps1-8.md  MCA_Implementation_Guide_v3.md  Multi-Touch Attribution A Complete Learning Resource Guide.md  Multi-Touch Attribution An Implementation-Focused Resource Guide.md  Technical_Manual.md  erie_mca_synth_config.yaml
scripts/: export_results.py  generate_data.py  precompute.py  run_attribution.py  run_validation.py
src/: __init__.py  utils.py
tests/: test_attribution.py  test_basic.py  test_data_contracts.py  test_data_generation.py  test_journey_assembly.py  test_markov_chain.py  test_optimization.py  test_shapley_axioms.py
(+67 files in other folders)
