[tool.poetry]
name = "erie-mca-demo"
version = "1.0.0"
description = "Multi-Channel Attribution Intelligence — Erie Insurance Capability Demo"
authors = ["MCA Team"]
readme = "README.md"
python = "^3.10"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^1.26"
scipy = "^1.12"
scikit-learn = "^1.4"
plotly = "^5.22"
dash = "^2.18"
dash-bootstrap-components = "^1.6"
networkx = "^3.2"
pulp = "^2.8"
torch = "^2.2"
statsmodels = "^0.14"
lifelines = "^0.29"
pyarrow = "^15.0"
pydantic = "^2.6"
pyyaml = "^6.0"
tqdm = "^4.66"
loguru = "^0.7"
diskcache = "^5.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
hypothesis = "^6.98"

[tool.poetry.scripts]
generate-data = "scripts.generate_data:main"
run-attribution = "scripts.run_attribution:main"
precompute = "scripts.precompute:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
